修改发布排除

--- a/easyexcel-test/pom.xml
+++ b/easyexcel-test/pom.xml
@@ -14,6 +14,10 @@
     <packaging>jar</packaging>
     <artifactId>easyexcel-test</artifactId>
 
+    <properties>
+        <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.alibaba</groupId>
