修改排除测试案例

--- a/easyexcel-test/pom.xml
+++ b/easyexcel-test/pom.xml
@@ -52,9 +52,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <includes>
-                        <include>/com/alibaba/easyexcel/test/core/**/*.java</include>
-                    </includes>
+                    <excludes>
+                        <exclude>/com/alibaba/easyexcel/test/demo/**/*.java</exclude>
+                        <exclude>/com/alibaba/easyexcel/test/temp/**/*.java</exclude>
+                        <exclude>/com/alibaba/easyexcel/test/util/**/*.java</exclude>
+                    </excludes>
                     <testFailureIgnore>true</testFailureIgnore>
                 </configuration>
             </plugin>
