--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
       - name: Chmod
         run:  chmod +x mvnw
       - name: Test with Maven
-        run: ./mvnw test -B
+        run: ./mvnw test -B -Dmaven.test.skip=false
       - name: Maven Build
         run: ./mvnw install -B -V
       - name: Java Doc
