--- a/pom.xml
+++ b/pom.xml
@@ -143,9 +143,9 @@
                 <version>1.2.5</version>
             </dependency>
             <dependency>
-                <groupId>com.alibaba</groupId>
-                <artifactId>fastjson</artifactId>
-                <version>1.2.78</version>
+                <groupId>com.alibaba.fastjson2</groupId>
+                <artifactId>fastjson2</artifactId>
+                <version>2.0.3</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
