--- a/.github/workflows/sync2gitee.yml
+++ b/.github/workflows/sync2gitee.yml
@@ -1,5 +1,5 @@
 # 通过 Github action， 在仓库的每一次 commit 后自动同步到 Gitee 上
-name: sync2gitee
+name: Mirror the Github organization repos to Gitee
 on:
   push:
     branches:
@@ -11,13 +11,13 @@ jobs:
       - uses: actions/checkout@main
         with:
           persist-credentials: false
-      - name: sync github -> gitee
+      - name: Mirror the Github organization repos to Gitee.
         uses: Yikun/hub-mirror-action@master
         with:
           # 必选，需要同步的 Github 用户（源）
-          src: 'alibaba/easyexcel'
+          src: alibaba/easyexcel
           # 必选，需要同步到的 Gitee 用户（目的）
-          dst: 'easyexcel/easyexcel'
+          dst: easyexcel/easyexcel
           # 必选，Gitee公钥对应的私钥，https://gitee.com/profile/sshkeys
           dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
           # 必选，Gitee对应的用于创建仓库的token，https://gitee.com/profile/personal_access_tokens
