测试同步代码

--- a/.github/workflows/sync2gitee.yml
+++ b/.github/workflows/sync2gitee.yml
@@ -1,9 +1,7 @@
 # 通过 Github action， 在仓库的每一次 commit 后自动同步到 Gitee 上
 name: Mirror the Github organization repos to Gitee
-on:
-  push:
-    branches:
-      - bugfix
+on: [push]
+
 jobs:
   repo-sync:
     runs-on: ubuntu-latest
