测试最后的同步

--- a/.github/workflows/sync2gitee.yml
+++ b/.github/workflows/sync2gitee.yml
@@ -1,6 +1,6 @@
 # 通过 Github action， 在仓库的每一次 commit 后自动同步到 Gitee 上
 name: Mirror the Github organization repos to Gitee
-on: [push]
+on: [ push ]
 
 jobs:
   repo-sync:
@@ -12,15 +12,15 @@ jobs:
       - name: Mirror the Github organization repos to Gitee.
         uses: Yikun/hub-mirror-action@master
         with:
-          # 必选，需要同步的 Github 用户（源）
-          src: alibaba/easyexcel
-          # 必选，需要同步到的 Gitee 用户（目的）
-          dst: easyexcel/easyexcel
+          # 必选，需要同步的 Github 这里记住选择的是仓库 或者账号 而不是具体的项目
+          src: github/alibaba
+          # 必选，需要同步到的 Gitee 这里记住选择的是仓库 或者账号 而不是具体的项目
+          dst: gitee/easyexcel
           # 必选，Gitee公钥对应的私钥，https://gitee.com/profile/sshkeys
           dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
           # 必选，Gitee对应的用于创建仓库的token，https://gitee.com/profile/personal_access_tokens
-          dst_token:  ${{ secrets.GITEE_TOKEN }}
+          dst_token: ${{ secrets.GITEE_TOKEN }}
           # 如果是组织，指定组织即可，默认为用户 user
-          # account_type: org
-          # 直接取当前项目的仓库名
+          account_type: org
+          # 需要同步的仓库里面的项目
           static_list: "easyexcel"
