--- a/easyexcel-support/pom.xml
+++ b/easyexcel-support/pom.xml
@@ -11,6 +11,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
+    <url>https://github.com/alibaba/easyexcel</url>
     <packaging>jar</packaging>
     <artifactId>easyexcel-support</artifactId>
     <name>easyexcel-support</name>
