--- a/easyexcel-test/pom.xml
+++ b/easyexcel-test/pom.xml
@@ -21,6 +21,13 @@
     </properties>
 
     <dependencies>
+        <!-- slf4j -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>easyexcel-core</artifactId>
