fix: fix the spring boot Application EasyexcelApplication cannot start

--- a/easyexcel-test/pom.xml
+++ b/easyexcel-test/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
