--- a/easyexcel-core/pom.xml
+++ b/easyexcel-core/pom.xml
@@ -40,5 +40,9 @@
             <groupId>org.ehcache</groupId>
             <artifactId>ehcache</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
     </dependencies>
 </project>
